# gtkwave

gtkwave3-gtk3/: CMakeLists.txt
gtkwave3-gtk3/src/: CMakeLists.txt  globals.h  wavewindow.c
gtkwave3-gtk3/src/cocoa/: CMakeLists.txt
gtkwave3-gtk3/src/helpers/: CMakeLists.txt
gtkwave3-gtk3/src/helpers/fst/: CMakeLists.txt
gtkwave3-gtk3/src/liblzma/: CMakeLists.txt
